fix for shadcn forcing light and dark mode

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -140,6 +140,6 @@
     @apply border-border outline-ring/50;
     }
   body {
-    @apply bg-background text-foreground;
+    /* @apply bg-background text-foreground; */
     }
 }
